--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                 <div class="col-md-6 col-lg-5">
                     <div class="about_us_text">
                         <h2>About Us</h2>
-                        <p>Wellness and well-being go hand in hand. The goal of MediTracker is to facilitate a platform for all patients to keep track of their medical health. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, quod? </p>
+                        <p>Wellness and well-being go hand in hand. MediTracker aims to facilitate a platform for users to keep track of their medical health and needs. Everyone should be able to prioritize their health care and the purpose of this application is to offer a neatly organized space, just for that. Let’s stop putting out health on the back burner and start prioritizing it today.  </p>
                         <div class="banner_item">
                             <div class="single_item">
                                 <img src="/img/icon/banner_1.svg" alt="">
