--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 
-<main class="container">
+<main class="container background">
   <div class="col-lg-5 mx-auto">
       <img class="insurance-card" src="<%= post.image%>" />
         <% if (post.user == user.id) { %>
