Modified padding and margins of forms/buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,7 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h5>Modern Health</h5>
-                            <h1>Track your health 
-                                in one place</h1>
+                            <h1>Track your health <br> in one place </h1>
                             <p>Have you ever forgotten what day you scheduled your doctor’s appointment? We've all been there. MediTracker helps users track all their appointments, physicians, and insurance information in one application.</p>
                             <a href="/signup" class="btn_2">Signup</a>
                         </div>
