--- a/public/css/style.css
+++ b/public/css/style.css
@@ -611,9 +611,8 @@ ul {
 
 
 @media (max-width: 576px) {
-  .banner_text p {
-    padding-left: 2em;
-    /* text-align: justify; */
+  .banner_part {
+    padding-left: 0;
   }
   
 }
@@ -987,8 +986,32 @@ ul {
 .h1-todos {
   font-size: 1.8em;
   font-family: 'Oswald';
-  margin-top: 7em;
+  margin-top: 9em;
   min-width: 100%;
+}
+
+@media (max-width: 576px) {
+  .h1-todos {
+    padding-top: 3em;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .h1-todos {
+    padding-top: 4em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .h1-todos {
+    padding-top: 3em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .h1-todos {
+    padding-top: 1em;
+  }
 }
 
 .addAppointment  {
@@ -1173,11 +1196,12 @@ th{
 .insurance-btn {
   width: auto;
   background: #0070fa;
-  padding: 8px 10px;
+  padding: 6px 10px;
+  margin-bottom: 3em;
   margin-top: 1em;
   color: white;
   border-radius: 5px;
-  text-align: center;
+  /* text-align: justify; */
   border: 1px solid #0070fa;
   cursor: pointer;
 
@@ -1187,6 +1211,30 @@ th{
   letter-spacing: 2px;
 }
 
+
+@media (max-width: 576px) {
+  .insurance-btn {
+    margin-bottom: 10em;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .insurance-btn {
+    margin-bottom: 10em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .insurance-btn {
+    margin-bottom: 10em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .insurance-btn {
+    margin-bottom: 10em;
+  }
+}
 /* Footer */
 
 footer {
