--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,7 +7,7 @@
         <form
           action="/post/deletePost/<%= post.id %> ?_method=DELETE"
           method="POST"
-          class="col-3">
+          class="col-lg-5">
           <button class="insurance-btn btn-primary fa fa-trash" type="submit"> Delete</button>
         </form>
         <%}%>
